--- a/src/styles.scss
+++ b/src/styles.scss
@@ -185,6 +185,8 @@ background-color: transparent;
 border-radius: 0;
 }
 
+// modais 
+
 
 .modal-header{
 //background-image: url("https://d2zr9w65gdacs9.cloudfront.net/50158/vagas-21564757671inline.png") !important;
@@ -203,7 +205,6 @@ padding: 2%;
   background-size: 100%;
   background-repeat: no-repeat;
   font: bold;
-  
   color: white;
 }
 
@@ -217,7 +218,7 @@ padding: 2%;
   border-bottom-left-radius: .3rem;
   background: transparent;
  // background-image: url(https://www.criticaltechworks.com/static/images/imagem_banner_new.png);
-border: none;
+  border: none;
 }
 
 
