--- a/src/app/layout/question/generate-interview/generate-interview.component.html
+++ b/src/app/layout/question/generate-interview/generate-interview.component.html
@@ -52,7 +52,7 @@
 
         <div>
             <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg"
-                class="modalLogo rounded float-left">
+                class="modalLogo rounded float-left" style="width: 45%">
         </div>
 
 
