--- a/src/app/layout/question/attribute-edit/attribute-edit.component.html
+++ b/src/app/layout/question/attribute-edit/attribute-edit.component.html
@@ -13,7 +13,7 @@
     <label for="type">Types</label>
     <input id="type" name="value" type="text" style="width: 93%; margin-left: 4px; margin-top: 3px; margin-bottom: 4px;" [(ngModel)]="attributeValue.value">
     <button  (click)= "createAttributeValue()" style="margin-top: 3px; margin-bottom: 4px; background-color:rgb(0, 221, 217); border-radius: .25rem; color:rgb(0, 0, 120)">
-    + </button>
+    +</button>
     </div>
     
     <div class="my-chip-list">
@@ -24,15 +24,13 @@
                 style="border-radius: 1rem; border-color: rgb(0, 221, 217); background-color:rgb(0, 221, 217); font-size: 15px;">x</button>
         </label>
     </div>
-
-
     
 <div class="modal-footer">
 
-   
-        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
-   
-
+   <div>
+        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left"
+        style="margin-right: 2.25rem">
+    </div>
 
     <button type="button" class="editCategoryButton" (click)="edit()">Edit</button>
 
