--- a/src/app/layout/question/question-edit/question-edit.component.html
+++ b/src/app/layout/question/question-edit/question-edit.component.html
@@ -40,30 +40,32 @@
             </option>
         </select>
         <button *ngIf="attributeValueOption != '' " (click)="addAttributeValue(attributeValueOption)"
-            style="margin-top: 3px; margin-bottom: 4px; background-color: cadetblue; border-radius: .25rem; color: black">
+            style="margin-top: 3px; margin-bottom: 4px; background-color: rgb(0, 221, 217); border-radius: .25rem; color: rgb(0, 0, 120)">
             + </button>
     </div>
 
 
     <div class="my-chip-list">
         <label *ngFor="let selectedValueString of selectedValuesString"
-            style="background-color: cadetblue; border-radius: 1rem; padding-top: 3px; padding-left: 6px; padding-right: 5px; padding-bottom: 3px; margin: 2px">
+            style="background-color: rgb(0, 221, 217); border-radius: 1rem; padding-top: 3px; padding-left: 6px; padding-right: 5px; padding-bottom: 3px; margin: 2px">
             {{selectedValueString}}
             <button class="myRemove" (click)="remove(selectedValueString)"
-                style="border-radius: 1rem; border-color: cadetblue; background-color:cadetblue; font-size: 15px;">x</button>
+                style="border-radius: 1rem; border-color: rgb(0, 221, 217); background-color:rgb(0, 221, 217); font-size: 15px;">x</button>
         </label>
     </div>
 
     <label for="" *ngIf="empty" style="font-size: 12px;"> (All categories are defined)</label> 
 
-</div>
+
 
 <div class="modal-footer">
 
 
     <div>
-        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left" 
+        style="margin-right: 2.25rem">
     </div>
     
     <button type="button" class="editQuestionButton" (click)="editQuestion()">Edit</button>
+</div>
 </div>
