overflow load-interview

--- a/src/app/layout/interview/interview-load/interview-load.component.scss
+++ b/src/app/layout/interview/interview-load/interview-load.component.scss
@@ -4,6 +4,11 @@
     overflow: auto;
   }
 
+  .modalTemplate {
+    max-height:280px; 
+    overflow-y: auto;
+  }
+
 #questionTable {
     background-image: url(https://www.criticaltechworks.com/static/images/imagem_banner_new.png);
     background-size: 100%;
