--- a/src/app/layout/question/attribute-edit/attribute-edit.component.html
+++ b/src/app/layout/question/attribute-edit/attribute-edit.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="modal-body">
 
-    <label for="attribute" class="font-weight-bold" style="margin-bottom: 0px; margin-left: 4px;">Category:</label>
+    <label for="attribute" class="font-weight" style="margin-bottom: 0px; margin-left: 4px;">Category:</label>
     <input id="attribute" #attributeEdit="ngModel" class="w-100 p-1 m-1" name="attribute" type="text" [(ngModel)]="attribute.category" placeholder="Write Category">
 
             <div class="text-danger" *ngIf="categoryIsInvalid">
@@ -14,7 +14,7 @@
             </div>
 
     <div>
-    <label for="type">Types</label>
+    <label for="type">Types:</label>
     <input id="type" name="value" type="text" style="width: 93%; margin-left: 4px; margin-top: 3px; margin-bottom: 4px;" [(ngModel)]="attributeValue.value">
     <button  (click)= "createAttributeValue()" style="margin-top: 3px; margin-bottom: 4px; background-color:rgb(0, 221, 217); border-radius: .25rem; color:rgb(0, 0, 120)">
     +</button>
@@ -49,7 +49,7 @@
    
 </div>
 
-<div class="row ml-5 mr-2">
+<div class="row ml-5 mr-2" style="margin-left: 2rem!important;">
     <span *ngIf="toDelete" style="font-size: 15px;">Are you sure you want to delete this category? All classes in this category will also be removed.</span>
-    <button type="button" class="deleteCategoryButton" *ngIf="toDelete" (click)="delete()">Yes</button> 
+    <button type="button" class="deleteCategoryButton" style="margin-top: 1rem;" *ngIf="toDelete" (click)="delete()">Yes</button> 
 </div>
