--- a/src/app/layout/interview/interview-submit/interview-submit.component.html
+++ b/src/app/layout/interview/interview-submit/interview-submit.component.html
@@ -16,7 +16,13 @@
     </div>
     <label for="form-row">Email:</label>
     <input class=" form-control p-1 m-1" name="email" value="email" type="text" [(ngModel)]="email" placeholder="example: email@adress.com" />
-</div>
+
 <div class="modal-footer">
+
+    <div>
+        <img src="https://www.criticaltechworks.com/img/KNUxPXeDj-logo_CRITICALTECHWORKS_LOGO+signature_LOGO+signature.svg" class="modalLogo rounded float-left">
+    </div>
+
     <button type="button" class="loadIntButton" routerLink="layout/interview-results" (click)="submitInterview()">Submit</button>
+</div>
 </div>
